Added scroll to top button.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 description: Strategic communication
 ---
 
-<header>
+<header id="top">
   <div class="cover bg-left bg-center-l" style="background-image: url({{ site.baseurl }}/images/dubai-skyline.jpg)">
     <div class="bg-black-60">
 
@@ -42,7 +42,7 @@ description: Strategic communication
 
      <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by <a href="{{ site.baseurl }}/tom-ashby" class="bb bw2 b--ashblue no-underline white dim">Tom Ashby</a> and <a href="{{ site.baseurl }}/rupert-wright" class="bb bw2 b--ashblue no-underline white dim">Rupert Wright</a>, based in London and Dubai and operating worldwide. </p>
 
-     <p class="f3 ph2 ph4-l lh-copy mt2 white">Our services fall under three main categories</p>
+     <p class="f3 ph2 ph4-l lh-copy mt2 white" id="fadein-backtotop">Our services fall under three main categories</p>
   </div>
 
   <div class="dt-ns dt--fixed-ns pb4">
