Finished the button.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ description: Strategic communication
 
      <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by <a href="{{ site.baseurl }}/tom-ashby" class="bb bw2 b--ashblue no-underline white dim">Tom Ashby</a> and <a href="{{ site.baseurl }}/rupert-wright" class="bb bw2 b--ashblue no-underline white dim">Rupert Wright</a>, based in London and Dubai and operating worldwide. </p>
 
-     <p class="f3 ph2 ph4-l lh-copy mt2 white" id="fadein-backtotop">Our services fall under three main categories</p>
+     <p class="f3 ph2 ph4-l lh-copy mt2 white">Our services fall under three main categories</p>
   </div>
 
   <div class="dt-ns dt--fixed-ns pb4">
@@ -81,12 +81,10 @@ description: Strategic communication
 
   </div>
 </div>
-
 </section>
 
-
 <section id="situations" class="mw7-ns center ph2 pv4 pv5-l ph5-ns ph4-l">
-  <h2 class="f1 ph2 ph0-ns ashblue mb3-ns ttu">Situations</h2>
+  <h2 class="f1 ph2 ph0-ns ashblue mb3-ns ttu" id="fadein-backtotop">Situations</h2>
 
   {% for situation in site.situations %}
 
