Added a few more subtle animations.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ description: Strategic communication
 </section>
 
 <section id="about" class="bg-black">
-  <div class="mw7-ns center ph2 pv4 pv5-ns pa3-l ph5-ns pt5-l pb4-l">
+  <div class="mw7-ns center ph2 pv4 pv5-ns pa3-l ph5-ns pt5-l pb4-l" data-aos="fade-up">
     <h2 class="f1 ph2 ph4-l ashblue ttu">About</h2>
 
      <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by <a href="{{ site.baseurl }}/tom-ashby" class="bb bw2 b--ashblue no-underline white dim">Tom Ashby</a> and <a href="{{ site.baseurl }}/rupert-wright" class="bb bw2 b--ashblue no-underline white dim">Rupert Wright</a>, based in London and Dubai and operating worldwide. </p>
@@ -57,7 +57,7 @@ description: Strategic communication
         <li class="lh-copy pt3">Campaign planning</li>
       </ul>
   </div>
-  <div class="dtc-ns pa3 pa4-ns pt2">
+  <div class="dtc-ns pa3 pa4-ns pt2" >
     <h2 class="f3 ashblue ttu">Content development</h2>
       <ul class="list pl0 white">
         <li class="lh-copy pt3">Messaging</li>
@@ -113,7 +113,7 @@ description: Strategic communication
     <p class="f6">
       Sectors
     </p>
-    <h1 class="f2 f1-l mt0 mb4 mb5-ns ttu white"><span class="ashblue">
+    <h1 class="f2 f1-l mt0 mb4 mb5-ns ttu white" data-aos="zoom-in"><span class="ashblue">
       Ashbright</span><br class="dn db-ns white"> works across a broad variety of sectors
     </h1>
   </div>
