--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ description: Strategic communication
 </section>
 
 <section id="situations" class="mw7-ns center ph2 pv4 pv5-l ph5-ns ph4-l">
-  <h2 class="f1 ph2 ph0-ns ashblue mb3-ns ttu" id="fadein-backtotop">Situations</h2>
+  <h2 class="f1 ph2 ph0-ns ashblue mb3-ns ttu">Situations</h2>
 
   {% for situation in site.situations %}
 
