Add file links to the style guide.

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -73,25 +73,62 @@ layout: default
     <h2>Logos</h2>
 
     <h3 class="f6 ttu mb3">Horizontal logo - Standard</h3>
-    <img class="mb4" src="/images/LOGO-HORIZ-RGB.png">
+    <img src="/images/LOGO-HORIZ-RGB.png">
+    <p class="mt1 pb4"><a href="https://www.dropbox.com/sh/h54xtlc9z3e3lat/AABn5hWKnrX-tEq01-B2kK8qa?dl=0">Download the standard logo</a></p>
 
     <h3 class="f6 ttu mb3">Horizontal logo - Black and white</h3>
-    <img class="mb4" src="/images/LOGO-HORIZ-BW.png">
+    <img src="/images/LOGO-HORIZ-BW.png">
+    <p class="mt1 pb4"><a href="https://www.dropbox.com/s/nuxbxfl1x6i9ay2/LOGO-HORIZ-BW.png?dl=0">Download the standard logo in black and white</a></p>
 
     <h3 class="f6 ttu mb3">Horizontal logo - For dark background</h3>
     <div class="bg-black">
-      <img class="ma4" src="/images/LOGO-HORIZ-RGBw.png">
+      <img src="/images/LOGO-HORIZ-RGBw.png">
     </div>
+    <p class="mt1 pb4"><a href="https://www.dropbox.com/s/73pmyeaj6t79lh4/LOGO-HORIZ-RGBw.png?dl=0">Download the logo for dark backgrounds</a></p>
 
-    <h3 class="f6 ttu mb3">Square logo</h3>
-    <img class="mb4" src="/images/LOGO-RGB.png">
+    <h3 class="f6 ttu mb3">Square logo (blue background)</h3>
+    <img src="/images/LOGO-RGB.png">
+    <p class="mt1 pb4"><a href="https://www.dropbox.com/s/g3dr0lv92os5gjh/LOGO-RGB.png?dl=0">Download the square logo (blue background)</a></p>
+
+    <h3 class="f6 ttu mb3">Square logo (white background)</h3>
+    <img src="/images/LOGO-RGB2.png">
+    <p class="mt1 pb4"><a href="https://www.dropbox.com/s/dypzqutwyrhpq23/LOGO-RGB2.png?dl=0">Download the square logo (white background)</a></p>
 
     <h3 class="f6 ttu mb3">Vertical logo</h3>
-    <img class="mb4" src="/images/LOGO-VERT-RGB.png">
+    <img src="/images/LOGO-VERT-RGB.png">
+    <p class="mt1 pb4"><a href="https://www.dropbox.com/s/ty6vwh452bnalj8/LOGO-VERT-RGB.png?dl=0">Download the vertical logo</a></p>
 
     <h3 class="f6 ttu mb3">Vertical logo - Black and white</h3>
-    <img class="mb4" src="/images/LOGO-VERT-BW.png">
+    <img src="/images/LOGO-VERT-BW.png">
+    <p class="mt1 pb4"><a href="https://www.dropbox.com/s/d7v6rpjfifzbrrb/LOGO-VERT-BW.png?dl=0">Download the vertical logo (black and white)</a></p>
   </div>
 
-</div>
+  <div class="lh-copy measure">
+    <h2>Design files</h2>
 
+    <h3 class="f6 ttu mb3">Briefing note</h3>
+    <p class="mt1 pb3"><a href="https://www.dropbox.com/s/kfwcb0os7jm7f0w/briefing-note-d2.docx?dl=0">Download the briefing note</a></p>
+
+    <h3 class="f6 ttu mb3">Business cards</h3>
+    <p class="mt1 pb3"><a href="https://www.dropbox.com/s/zpo9x1aviznp23l/ashbright-business-cards-3-1.pdf?dl=0">Download the business cards</a></p>
+
+    <h3 class="f6 ttu mb3">Email signature</h3>
+    <p class="mt1 pb3"><a href="https://www.dropbox.com/s/r5j7bfs9xvup67m/Email%20Signature.eml?dl=0">Download the email signature</a></p>
+
+    <h3 class="f6 ttu mb3">Invoice</h3>
+    <p class="mt1 pb3"><a href="https://www.dropbox.com/s/dbmcps187943c3b/ashbright-invoice-template.docx?dl=0">Download the invoice</a></p>
+
+    <h3 class="f6 ttu mb3">Letterhead</h3>
+    <p class="mt1 pb3"><a href="https://www.dropbox.com/s/mvs72u7u7lc82kt/ashbright-letterhead.pdf?dl=0">Download the letterhead</a></p>
+
+    <h3 class="f6 ttu mb3">Presentation</h3>
+    <ul class="mt1 pb3">
+      <li>Install fonts from fonts folder: Oswald and PT Serif</li>
+      <li>Double click on template to create a new document in PowerPoint</li>
+      <li>Click on new slide and select the correct slide template</li>
+    </ul>
+    <p class="mt1 pb3"><a href="https://www.dropbox.com/s/i2u8qh2mc1vzgu5/ashbright-d2-template.potx?dl=0">Download the Powerpoint presentation template</a></p>
+
+
+  </div>
+</div>
