Removed the animations for now.

--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@ description: Strategic communication
 
 </section>
 
-<section id="about" class="bg-black cf pa3 pa4-m pa5-l mw9 center">
+<section id="sectors" class="bg-black cf pa3 pa4-m pa5-l mw9 center">
   <div class="fr w-100 w-80-l">
     <p class="f6">
       Sectors
     </p>
-    <h1 class="f2 f1-l mt0 mb4 mb5-ns ttu white" data-aos="zoom-in"><span class="ashblue">
+    <h2 class="f2 f1-l mt0 mb4 mb5-ns ttu white"><span class="ashblue">
       Ashbright</span><br class="dn db-ns white"> works across a broad variety of sectors
-    </h1>
+    </h2>
   </div>
   <div class="f6 lh-copy fl w-100 mb4-ns">
     <div class="fl-ns w-100 w-20-l pr3-m pr5-l white">
