--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -81,7 +81,7 @@ layout: default
     <p class="mt1 pb4"><a href="https://www.dropbox.com/s/nuxbxfl1x6i9ay2/LOGO-HORIZ-BW.png?dl=0">Download the standard logo in black and white</a></p>
 
     <h3 class="f6 ttu mb3">Horizontal logo - For dark background</h3>
-    <div class="bg-black">
+    <div class="bg-black pa4">
       <img src="/images/LOGO-HORIZ-RGBw.png">
     </div>
     <p class="mt1 pb4"><a href="https://www.dropbox.com/s/73pmyeaj6t79lh4/LOGO-HORIZ-RGBw.png?dl=0">Download the logo for dark backgrounds</a></p>
@@ -128,7 +128,6 @@ layout: default
       <li>Click on new slide and select the correct slide template</li>
     </ul>
     <p class="mt1 pb3"><a href="https://www.dropbox.com/s/i2u8qh2mc1vzgu5/ashbright-d2-template.potx?dl=0">Download the Powerpoint presentation template</a></p>
-
 
   </div>
 </div>
