Fix section background issue on wide screens.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@ description: Strategic communication
 
 </section>
 
-<section id="sectors" class="bg-black cf pa3 pa4-m pa5-l mw9 center">
+<section id="sectors" class="bg-black">
+  <div class="cf pa3 pa4-m pa5-l mw9 center">
   <div class="fr w-100 w-80-l">
     <p class="f6">
       Sectors
@@ -171,6 +172,7 @@ description: Strategic communication
         Sovereign Wealth and Investment Funds
       </p>
     </div>
+  </div>
   </div>
 
 </section>
