--- a/admin/index.html
+++ b/admin/index.html
@@ -7,6 +7,8 @@
 
   <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^0.4/dist/cms.css" />
 
+    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 </head>
 <body>
   <script src="https://unpkg.com/netlify-cms@^0.4/dist/cms.js"></script>
