Added the admin login script and button

--- a/admin/index.html
+++ b/admin/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-  <div data-netlify-identity-menu></div>
+  <div data-netlify-identity-button>Log in to Ashbright Content Manager</div>
 
   <script src="https://unpkg.com/netlify-cms@^0.4/dist/cms.js"></script>
 </body>
