--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Home
-description: Strategic communication
+description: Ashbright is a strategic communications firm that provides counsel to governments, companies and successful individuals.
 ---
 
 <header id="top">
