Top section and vertical text

--- a/brightx/index.html
+++ b/brightx/index.html
@@ -4,9 +4,20 @@ title: Home
 description: BrightX
 ---
 
-<section id="why" class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l" data-aos="fade-up">
-  <h2 class="f1 ph2 ph4-l ashblue ttu">What we do</h2>
+<section class="bg-brightxred vh-75 flex items-end">
+  <div class="center ph3 ph4-ns ph4-l pv5">
+    <img class="mb4 mb0-l mt2-l ml1-l w-90 w-third-l pb3" src="{{ site.baseurl }}/images/BrightX-Logo-ColourRedBack-01-web.png" alt="BrightX" >
+     <p class="f1 white measure-wide">Bright X records and amplifies defining moments of professional success.</p>
+  </div>
+</section>
 
-  <p class="f3 ph2 ph4-l lh-copy mt2">Ashbright is a strategic communications firm that provides counsel to governments, companies and successful individuals. We use data and intelligence to understand and engage people. We design and execute state-of-the-art programmes to enable leaders to mobilise resources, shape perceptions and influence behaviour.</p>
+<section class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l" data-aos="fade-up">
+  <h2 class="f1 ph2 ph4-l ttu line-before tracked-tight vertical-text">Applify your<br> <span class="fw3">success</span></h2>
+</section>
+
+<section class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l" data-aos="fade-up">
+  <h2 class="f1 ph2 ph4-l ttu line-after tracked-tight">Services</h2>
+
+  <p class="f2 ph2 ph4-l lh-copy mt2">Bright X is a pop-up creative newsroom that produces high quality video, photography and text for distribution across your social media channels. </p>
 
 </section>
