First draft of bright x

--- a/brightx/index.html
+++ b/brightx/index.html
@@ -5,19 +5,83 @@ description: BrightX
 ---
 
 <section class="bg-brightxred vh-75 flex items-end">
-  <div class="center ph3 ph4-ns ph4-l pv5">
-    <img class="mb4 mb0-l mt2-l ml1-l w-90 w-third-l pb3" src="{{ site.baseurl }}/images/BrightX-Logo-ColourRedBack-01-web.png" alt="BrightX" >
+  <div class="ph3 ph4-ns ph5-l pv5 center">
+    <div class="fr w-100 w-80-l">
+      <img class="mb4 mb0-l mt2-l ml1-l w-90 w-third-l pb3" src="{{ site.baseurl }}/images/BrightX-Logo-ColourRedBack-01-web.png" alt="BrightX" >
      <p class="f1 white measure-wide">Bright X records and amplifies defining moments of professional success.</p>
+    </div>
   </div>
 </section>
 
-<section class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l" data-aos="fade-up">
-  <h2 class="f1 ph2 ph4-l ttu line-before tracked-tight vertical-text">Applify your<br> <span class="fw3">success</span></h2>
+<section class="center pv4 pb4 pv5-ns" data-aos="fade-up">
+  <div class="fr w-100 w-80-l">
+    <div class="flex pt3 pb6">
+      <h1 class="f1 ph2 ph4-l ttu tracked-tight vertical-text">Applify your<br> <span class="fw3">success</span></h1>
+      <p class="f2 ph2 ph4-l lh-copy measure">Bright X is a pop-up creative newsroom that produces high quality video, photography and text for distribution across your social media channels. </p>
+    </div>
+   </div>
 </section>
 
-<section class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l" data-aos="fade-up">
-  <h2 class="f1 ph2 ph4-l ttu line-after tracked-tight">Services</h2>
+<section id="sectors" class="pt4 pt0-l pb4 pt0-l bt b--black-10 bg-brightxdarkgrey white cb">
+  <div class="cf mw9 ph3 ph4-l pb5-l center">
+  <div class="fr w-100 w-80-l" >
+    <p class="f6 pt5">
+      Services
+    </p>
+    <div class="f1 ttu tracked-tight pb4">
+      <h1 class="mt2 white">Content is<br>
+      <span class="fw3 white">king</h1>
+    </div>
+  </div>
+  <div class="f4 lh-copy fl w-100 mb4-ns">
+    <div class="fl-ns w-100 w-20-l pr3-m pr5-l">
+      <p>
+        Short video production and editing
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
+      <p>
+        World-class photography
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
+      <p>
+        Branded newsletter
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
+      <p>
+        Content strategy
+      </p>
+    </div>
+    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
+      <p>
+        Social media calendar and engagement plan
+      </p>
+    </div>
+  </div>
 
-  <p class="f2 ph2 ph4-l lh-copy mt2">Bright X is a pop-up creative newsroom that produces high quality video, photography and text for distribution across your social media channels. </p>
+  </div>
+</section>
 
+<section class="bg-brightxred white center pv4 pb4 pv5-ns" data-aos="fade-up">
+  <div class="fr w-100 w-80-l">
+    <div class="flex">
+      <h1 class="f1 ph2 ph4-l ttu tracked-tight vertical-text white">Community is<br> <span class="fw3">queen</span></h1>
+      <p class="f2 ph2 ph4-l lh-copy measure">Whether you are staging events at Davos, Cannes or any other global hub, Bright X ensures you engage with your worldwide audiences at those critical moments with beautiful content delivered live through your social channels.</p>
+    </div>
+   </div>
+</section>
+
+<section class="cf">
+  <div class="fl w-100 w-50-ns bg-light-gray mr4">
+    <img class="w-100" src="{{ site.baseurl }}/images/brightx-davos-square.jpg" alt="{{ page.bio-name }}">
+  </div>
+  <div class="fl w-100 w-40-ns ph2 pt5">
+    <h1 class="f1 ttu tracked-tight">Case study</h1>
+    <h2 class="f3 f-sub-ns fw1 mt1 mb3">Davos / .2019</h2>
+      <div class="bio-content">
+       <p>At Davos in January 2019, we delivered a creative newsroom for Ukraine House Davos, showcasing the best of Ukraine across four days of discussion panels, celebrity interviews, cultural events and parties. The house itself saw more than 7,000 people visit over five days, but these numbers were significantly amplified through our work with live streaming video, original video production, live tweets and social media outreach. In those five days alone, we achieved 56,700 live panel viewers on Facebook, 83,800 fans across Facebook and Instagram and 110,600 page engagements. Numbers that continue to grow after the event. </p>
+      </div>
+  </div>
 </section>
