--- a/brightx/index.html
+++ b/brightx/index.html
@@ -5,19 +5,21 @@ description: BrightX
 ---
 
 <section class="bg-brightxred vh-75 flex items-end">
-  <div class="ph3 ph4-ns ph5-l pv5 center">
-    <div class="fr w-100 w-80-l">
+  <div class="ph3 ph4-ns ph5-l pv5 center cf">
+    <div class="fl w-100 w-20-l">&nbsp;</div>
+    <div class="fl w-100 w-80-l">
       <img class="mb4 mb0-l mt2-l ml1-l w-90 w-third-l pb3" src="{{ site.baseurl }}/images/BrightX-Logo-ColourRedBack-01-web.png" alt="BrightX" >
      <p class="f1 white measure-wide">Bright X records and amplifies defining moments of professional success.</p>
     </div>
   </div>
 </section>
 
-<section class="center pv4 pb4 pv5-ns" data-aos="fade-up">
-  <div class="fr w-100 w-80-l">
+<section class="center pv4 pb4 pv5-ns cf">
+  <div class="fl w-100 w-20-l">&nbsp;</div>
+  <div class="fl w-100 w-80-l">
     <div class="flex pt3 pb6">
       <h1 class="f1 ph2 ph4-l ttu tracked-tight vertical-text">Applify your<br> <span class="fw3">success</span></h1>
-      <p class="f2 ph2 ph4-l lh-copy measure">Bright X is a pop-up creative newsroom that produces high quality video, photography and text for distribution across your social media channels. </p>
+      <p class="f2 ph2 ph4-l lh-copy measure" data-aos="fade-up">Bright X is a pop-up creative newsroom that produces high quality video, photography and text for distribution across your social media channels. </p>
     </div>
    </div>
 </section>
@@ -46,7 +48,7 @@ description: BrightX
     </div>
     <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
       <p>
-        Branded newsletter
+        Branded newsletters
       </p>
     </div>
     <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
@@ -64,20 +66,21 @@ description: BrightX
   </div>
 </section>
 
-<section class="bg-brightxred white center pv4 pb4 pv5-ns" data-aos="fade-up">
-  <div class="fr w-100 w-80-l">
+<section class="bg-brightxred white center pv4 pb4 pv5-ns cf">
+  <div class="fl w-100 w-20-l">&nbsp;</div>
+  <div class="fl w-100 w-80-l pt3 pb6">
     <div class="flex">
       <h1 class="f1 ph2 ph4-l ttu tracked-tight vertical-text white">Community is<br> <span class="fw3">queen</span></h1>
-      <p class="f2 ph2 ph4-l lh-copy measure">Whether you are staging events at Davos, Cannes or any other global hub, Bright X ensures you engage with your worldwide audiences at those critical moments with beautiful content delivered live through your social channels.</p>
+      <p class="f2 ph2 ph4-l lh-copy measure" data-aos="fade-up">Whether you are staging events at Davos, Cannes or any other global hub, Bright X ensures you engage with your worldwide audiences at those critical moments with beautiful content delivered live through your social channels.</p>
     </div>
    </div>
 </section>
 
 <section class="cf">
-  <div class="fl w-100 w-50-ns bg-light-gray mr4">
+  <div class="fl w-100 w-60-l bg-light-gray mr4">
     <img class="w-100" src="{{ site.baseurl }}/images/brightx-davos-square.jpg" alt="{{ page.bio-name }}">
   </div>
-  <div class="fl w-100 w-40-ns ph2 pt5">
+  <div class="fl w-100 w-30-l ph2 pt5">
     <h1 class="f1 ttu tracked-tight">Case study</h1>
     <h2 class="f3 f-sub-ns fw1 mt1 mb3">Davos / .2019</h2>
       <div class="bio-content">
