Wide screens version OK

--- a/brightx/index.html
+++ b/brightx/index.html
@@ -4,7 +4,7 @@ title: Home
 description: BrightX
 ---
 
-<section class="bg-brightxred vh-75 flex items-end">
+<section class="bg-brightxred vh-75 flex items-end" data-aos="fade-up">
   <div class="ph3 ph4-ns ph5-l pv5 center cf">
     <div class="fl w-100 w-20-l">&nbsp;</div>
     <div class="fl w-100 w-80-l">
@@ -17,7 +17,7 @@ description: BrightX
 <section class="center pv4 pb4 pv5-ns cf">
   <div class="fl w-100 w-20-l">&nbsp;</div>
   <div class="fl w-100 w-80-l">
-    <div class="flex pt3 pb6">
+    <div class="flex pt3 pb3">
       <h1 class="f1 ph2 ph4-l ttu tracked-tight vertical-text">Applify your<br> <span class="fw3">success</span></h1>
       <p class="f2 ph2 ph4-l lh-copy measure" data-aos="fade-up">Bright X is a pop-up creative newsroom that produces high quality video, photography and text for distribution across your social media channels. </p>
     </div>
@@ -68,7 +68,7 @@ description: BrightX
 
 <section class="bg-brightxred white center pv4 pb4 pv5-ns cf">
   <div class="fl w-100 w-20-l">&nbsp;</div>
-  <div class="fl w-100 w-80-l pt3 pb6">
+  <div class="fl w-100 w-80-l pt3 pb3">
     <div class="flex">
       <h1 class="f1 ph2 ph4-l ttu tracked-tight vertical-text white">Community is<br> <span class="fw3">queen</span></h1>
       <p class="f2 ph2 ph4-l lh-copy measure" data-aos="fade-up">Whether you are staging events at Davos, Cannes or any other global hub, Bright X ensures you engage with your worldwide audiences at those critical moments with beautiful content delivered live through your social channels.</p>
@@ -80,9 +80,9 @@ description: BrightX
   <div class="fl w-100 w-60-l bg-light-gray mr4">
     <img class="w-100" src="{{ site.baseurl }}/images/brightx-davos-square.jpg" alt="{{ page.bio-name }}">
   </div>
-  <div class="fl w-100 w-30-l ph2 pt5">
+  <div class="fl w-100 w-30-l ph2 pt5" data-aos="fade-up">
     <h1 class="f1 ttu tracked-tight">Case study</h1>
-    <h2 class="f3 f-sub-ns fw1 mt1 mb3">Davos / .2019</h2>
+    <h2 class="f3 f-sub-ns fw1 mt1 mb3">Davos <span class="fw6"><span class="brightxred">/</span> .2019</span></h2>
       <div class="bio-content">
        <p>At Davos in January 2019, we delivered a creative newsroom for Ukraine House Davos, showcasing the best of Ukraine across four days of discussion panels, celebrity interviews, cultural events and parties. The house itself saw more than 7,000 people visit over five days, but these numbers were significantly amplified through our work with live streaming video, original video production, live tweets and social media outreach. In those five days alone, we achieved 56,700 live panel viewers on Facebook, 83,800 fans across Facebook and Instagram and 110,600 page engagements. Numbers that continue to grow after the event. </p>
       </div>
