--- a/brightx/index.html
+++ b/brightx/index.html
@@ -9,7 +9,7 @@ description: BrightX
     <div class="fl w-100 w-20-l">&nbsp;</div>
     <div class="fl w-100 w-80-l">
       <img class="mb4 mb0-l mt2-l ml1-l w-90 w-third-l pb3" src="{{ site.baseurl }}/images/BrightX-Logo-ColourRedBack-01-web.png" alt="BrightX" >
-     <p class="f1 white measure-wide">Bright X records and amplifies defining moments of professional success.</p>
+     <p class="f2 f1-l white measure-wide">Bright X records and amplifies defining moments of professional success.</p>
     </div>
   </div>
 </section>
@@ -18,8 +18,8 @@ description: BrightX
   <div class="fl w-100 w-20-l">&nbsp;</div>
   <div class="fl w-100 w-80-l">
     <div class="flex pt3 pb3">
-      <h1 class="f1 ph2 ph4-l ttu tracked-tight vertical-text">Applify your<br> <span class="fw3">success</span></h1>
-      <p class="f2 ph2 ph4-l lh-copy measure" data-aos="fade-up">Bright X is a pop-up creative newsroom that produces high quality video, photography and text for distribution across your social media channels. </p>
+      <h1 class="f2 f1-l ph2 ph4-l ttu tracked-tight vertical-text">Applify your<br> <span class="fw3">success</span></h1>
+      <p class="f3 f2-l ph2 ph4-l lh-copy measure" data-aos="fade-up">Bright X is a pop-up creative newsroom that produces high quality video, photography and text for distribution across your social media channels. </p>
     </div>
    </div>
 </section>
@@ -70,8 +70,8 @@ description: BrightX
   <div class="fl w-100 w-20-l">&nbsp;</div>
   <div class="fl w-100 w-80-l pt3 pb3">
     <div class="flex">
-      <h1 class="f1 ph2 ph4-l ttu tracked-tight vertical-text white">Community is<br> <span class="fw3">queen</span></h1>
-      <p class="f2 ph2 ph4-l lh-copy measure" data-aos="fade-up">Whether you are staging events at Davos, Cannes or any other global hub, Bright X ensures you engage with your worldwide audiences at those critical moments with beautiful content delivered live through your social channels.</p>
+      <h1 class="f2 f1-l ph2 ph4-l ttu tracked-tight vertical-text white">Community is<br> <span class="fw3">queen</span></h1>
+      <p class="f3 f2-l ph2 ph4-l lh-copy measure" data-aos="fade-up">Whether you are staging events at Davos, Cannes or any other global hub, Bright X ensures you engage with your worldwide audiences at those critical moments with beautiful content delivered live through your social channels.</p>
     </div>
    </div>
 </section>
@@ -80,7 +80,7 @@ description: BrightX
   <div class="fl w-100 w-60-l bg-light-gray mr4">
     <img class="w-100" src="{{ site.baseurl }}/images/brightx-davos-square.jpg" alt="{{ page.bio-name }}">
   </div>
-  <div class="fl w-100 w-30-l ph2 pt5" data-aos="fade-up">
+  <div class="fl w-100 w-30-l ph2 pt2 pt5-l pb4" data-aos="fade-up">
     <h1 class="f1 ttu tracked-tight">Case study</h1>
     <h2 class="f3 f-sub-ns fw1 mt1 mb3">Davos <span class="fw6"><span class="brightxred">/</span> .2019</span></h2>
       <div class="bio-content">
