--- a/brightx/index.html
+++ b/brightx/index.html
@@ -1,7 +1,7 @@
 ---
 layout: brightx
-title: Home
-description: BrightX
+title: Bright X
+description: Bright X is a pop-up creative newsroom producing video, photography and text for social media.
 ---
 
 <section class="bg-brightxred vh-75 flex items-end" data-aos="fade-up">
