--- a/brightx/index.html
+++ b/brightx/index.html
@@ -27,7 +27,7 @@ description: Bright X is a pop-up creative newsroom producing video, photography
 <section id="sectors" class="pt4 pt0-l pb4 pt0-l bt b--black-10 bg-brightxdarkgrey white cb">
   <div class="cf mw9 ph3 ph4-l pb5-l center">
   <div class="fr w-100 w-80-l" >
-    <p class="f6 pt5">
+    <p class="f6 pt3 pt5-l">
       Services
     </p>
     <div class="f1 ttu tracked-tight pb4">
@@ -37,27 +37,27 @@ description: Bright X is a pop-up creative newsroom producing video, photography
   </div>
   <div class="f4 lh-copy fl w-100 mb4-ns">
     <div class="fl-ns w-100 w-20-l pr3-m pr5-l">
-      <p>
+      <p class="dashed-bullet">
         Short video production and editing
       </p>
     </div>
     <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
-      <p>
+      <p class="dashed-bullet">
         World-class photography
       </p>
     </div>
     <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
-      <p>
+      <p class="dashed-bullet">
         Branded newsletters
       </p>
     </div>
     <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
-      <p>
+      <p class="dashed-bullet">
         Content strategy
       </p>
     </div>
     <div class="fl-ns w-50-m w-20-l pr3-m pr5-l">
-      <p>
+      <p class="dashed-bullet">
         Social media calendar and engagement plan
       </p>
     </div>
@@ -77,10 +77,10 @@ description: Bright X is a pop-up creative newsroom producing video, photography
 </section>
 
 <section class="cf">
-  <div class="fl w-100 w-60-l bg-light-gray mr4">
+  <div class="fl w-100 w-60-l mr4">
     <img class="w-100" src="{{ site.baseurl }}/images/brightx-davos-square.jpg" alt="{{ page.bio-name }}">
   </div>
-  <div class="fl w-100 w-30-l ph2 pt2 pt5-l pb4" data-aos="fade-up">
+  <div class="fl w-100 w-30-l ph2 pt2 pt5-l pb4">
     <h1 class="f1 ttu tracked-tight">Case study</h1>
     <h2 class="f3 f-sub-ns fw1 mt1 mb3">Davos <span class="fw6"><span class="brightxred">/</span> .2019</span></h2>
       <div class="bio-content">
@@ -88,3 +88,15 @@ description: Bright X is a pop-up creative newsroom producing video, photography
       </div>
   </div>
 </section>
+
+<section class="center pa3-ns ph5-ns">
+  <div class="mw7-ns center ph5-ns">
+    <div class="f1 ttu tracked-tight tc-l ph2 ph3-ns">
+      <h1 class="mv3">Highlights <span class="fw3">Davos 2018</h1>
+    </div>
+    <div class="embed-container">
+      <iframe src="https://player.vimeo.com/video/315865077" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    </div>
+   </div>
+</section>
+
