--- a/brightx/index.html
+++ b/brightx/index.html
@@ -1,7 +1,7 @@
 ---
 layout: brightx
 title: Bright X
-description: Bright X is a pop-up creative newsroom producing video, photography and text for social media.
+description: Bright X is a pop-up creative newsroom producing video, photography and text to record and amplify defining moments of professional success.
 ---
 
 <section class="bg-brightxred vh-75 flex items-end" data-aos="fade-up">
@@ -18,7 +18,7 @@ description: Bright X is a pop-up creative newsroom producing video, photography
   <div class="fl w-100 w-20-l">&nbsp;</div>
   <div class="fl w-100 w-80-l">
     <div class="flex pt3 pb3">
-      <h1 class="f2 f1-l ph2 ph4-l ttu tracked-tight vertical-text">Applify your<br> <span class="fw3">success</span></h1>
+      <h2 class="f2 f1-l ph2 ph4-l ttu tracked-tight vertical-text">Applify your<br> <span class="fw3">success</span></h2>
       <p class="f3 f2-l ph2 ph4-l lh-copy measure" data-aos="fade-up">Bright X is a pop-up creative newsroom that produces high quality video, photography and text for distribution across your social media channels. </p>
 
     </div>
@@ -32,8 +32,8 @@ description: Bright X is a pop-up creative newsroom producing video, photography
       Services
     </p>
     <div class="f1 ttu tracked-tight pb4">
-      <h1 class="mt2 white">Content is<br>
-      <span class="fw3 white">king</h1>
+      <h2 class="mt2 white">Content is<br>
+      <span class="fw3 white">king</span></h2>
     </div>
   </div>
   <div class="f4 lh-copy fl w-100 mb4-ns">
@@ -71,7 +71,7 @@ description: Bright X is a pop-up creative newsroom producing video, photography
   <div class="fl w-100 w-20-l">&nbsp;</div>
   <div class="fl w-100 w-80-l pt3 pb3">
     <div class="flex">
-      <h1 class="f2 f1-l ph2 ph4-l ttu tracked-tight vertical-text white">Community is<br> <span class="fw3">queen</span></h1>
+      <h2 class="f2 f1-l ph2 ph4-l ttu tracked-tight vertical-text white">Community is<br> <span class="fw3">queen</span></h2>
       <p class="f3 f2-l ph2 ph4-l lh-copy measure" data-aos="fade-up">Whether you are staging events at Davos, Cannes or any other global hub, Bright X ensures you engage with your worldwide audiences at those critical moments with beautiful content delivered live through your social channels.</p>
     </div>
    </div>
@@ -82,8 +82,8 @@ description: Bright X is a pop-up creative newsroom producing video, photography
     <img class="w-100" src="{{ site.baseurl }}/images/brightx-davos-square.jpg" alt="{{ page.bio-name }}">
   </div>
   <div class="fl w-100 w-30-l ph2 pt2 pt5-l pb4">
-    <h1 class="f1 ttu tracked-tight">Case study</h1>
-    <h2 class="f3 f-sub-ns fw1 mt1 mb3">Davos <span class="fw6"><span class="brightxred">/</span> .2019</span></h2>
+    <h2 class="f1 ttu tracked-tight">Case study</h2>
+    <h3 class="f3 f-sub-ns fw1 mt1 mb3">Davos <span class="fw6"><span class="brightxred">/</span> .2019</span></h3>
       <div class="bio-content">
        <p>At Davos in January 2019, we delivered a creative newsroom for Ukraine House Davos, showcasing the best of Ukraine across four days of discussion panels, celebrity interviews, cultural events and parties. The house itself saw more than 7,000 people visit over five days, but these numbers were significantly amplified through our work with live streaming video, original video production, live tweets and social media outreach. In those five days alone, we achieved 56,700 live panel viewers on Facebook, 83,800 fans across Facebook and Instagram and 110,600 page engagements. Numbers that continue to grow after the event. </p>
       </div>
@@ -93,7 +93,7 @@ description: Bright X is a pop-up creative newsroom producing video, photography
 <section class="center pa3-ns ph5-ns">
   <div class="mw7-ns center ph5-ns">
     <div class="f1 ttu tracked-tight tc-l ph2 ph3-ns">
-      <h1 class="mv3">Highlights <span class="fw3">Davos 2019</h1>
+      <h2 class="mv3">Highlights <span class="fw3">Davos 2019</span></h2>
     </div>
     <div class="embed-container">
       <iframe src="https://player.vimeo.com/video/315865077" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
