--- a/brightx/index.html
+++ b/brightx/index.html
@@ -9,7 +9,7 @@ description: Bright X is a pop-up creative newsroom producing video, photography
     <div class="fl w-100 w-20-l">&nbsp;</div>
     <div class="fl w-100 w-80-l">
       <img class="mb4 mb0-l mt2-l ml1-l w-90 w-third-l pb3" src="{{ site.baseurl }}/images/BrightX-Logo-ColourRedBack-01-web.png" alt="BrightX" >
-     <p class="f2 f1-l white measure-wide">Bright X records and amplifies defining moments of professional success.</p>
+     <h1 class="f2 f1-l white measure-wide fw3">Bright X records and amplifies defining moments of professional success.</h1>
     </div>
   </div>
 </section>
