Add trailing slash to urls

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ description: Ashbright is a strategic communications firm that provides counsel 
         <div class="db dtc-l v-mid v-bottom-l w-100 w-75-l tc tr-l">
           <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu about" href="#about" title="About">About</a>
           <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu situations" href="#situations" title="Situations">Situations</a>
-          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu situations" href="{{ site.baseurl }}/brightx" title="Bright X">Bright X</a>
+          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu situations" href="{{ site.baseurl }}/brightx/" title="Bright X">Bright X</a>
           <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu contact" href="#contact" title="Contact">Contact</a>
         </div>
       </nav>
@@ -185,7 +185,7 @@ description: Ashbright is a strategic communications firm that provides counsel 
       <img class="mb4 mb0-l mt2-l ml1-l w-90 w-25-l pb3" src="{{ site.baseurl }}/images/BrightX-Logo-ColourRedBack-01-web.png" alt="BrightX" >
     <h2 class="f2 f1-l mt0 mb4 mb5-ns ttu white">Record and amplify defining moments of professional success</h2>
      <p class="f3 f2-l white measure-wide">Bright X is a pop-up creative newsroom that produces high quality video, photography and text for distribution across your social media channels. </p>
-      <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mv4 dib white bg-ashdarkgrey ttu tracked" href="{{ site.baseurl }}/brightx">Find out more</a>
+      <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mv4 dib white bg-ashdarkgrey ttu tracked" href="{{ site.baseurl }}/brightx/">Find out more</a>
     </div>
   </div>
 </section>
