More padding below the video

--- a/brightx/index.html
+++ b/brightx/index.html
@@ -91,7 +91,7 @@ description: Bright X is a pop-up creative newsroom producing video, photography
 </section>
 
 <section class="center pa3-ns ph5-ns">
-  <div class="mw7-ns center ph5-ns">
+  <div class="mw7-ns center ph5-ns pb4 pb5-l">
     <div class="f1 ttu tracked-tight tc-l ph2 ph3-ns">
       <h2 class="mv3">Highlights <span class="fw3">Davos 2019</span></h2>
     </div>
