--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 title: Home
-description: Ashbright is a strategic communications firm that provides counsel to governments, companies and successful individuals.
+description: "Ashbright is a strategic communications firm that provides counsel to governments, companies and
+successful
+individuals."
 ---
 
 <header id="top">
@@ -13,17 +15,20 @@ description: Ashbright is a strategic communications firm that provides counsel 
           <img class="mw4-5 pl4-l" src="{{ site.baseurl }}/images/LOGO-HORIZ-RGBw.png" alt="Ashbright">
         </a>
         <div class="db dtc-l v-mid v-bottom-l w-100 w-75-l tc tr-l">
-          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu about" href="#about" title="About">About</a>
-          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu situations" href="#situations" title="Situations">Situations</a>
-          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu situations" href="https://www.brightx.media/" title="Bright X">Bright X</a>
-          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu contact" href="#contact" title="Contact">Contact</a>
+          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu about" href="#about"
+            title="About">About</a>
+          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu situations" href="#situations"
+            title="Situations">Situations</a>
+          <a class="ash-sans hover-ashblue no-underline white f6 f5-l dib mr3 mr4-l ttu contact" href="#contact"
+            title="Contact">Contact</a>
         </div>
       </nav>
 
       <div class="mt4 mt6-ns mt7-l ph3 tc tl-l ml4-l">
         <h1 class="f-head f-head-ns fw4 white-90 mb0 lh-title ttu">{{ site.tagline }}</h1>
         <p class="f3 f-sub-ns fw1 white-80 mt1 mb3 i">Informing intelligent leadership</p>
-        <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l dib white bg-ashblue ttu tracked" href="mailto:ta@ashbright.com">{{ site.calltoaction }}</a>
+        <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mb5 mb6-ns mb4-l dib white bg-ashblue ttu tracked"
+          href="mailto:ta@ashbright.com">{{ site.calltoaction }}</a>
       </div>
 
     </div>
@@ -33,7 +38,10 @@ description: Ashbright is a strategic communications firm that provides counsel 
 <section id="why" class="mw7-ns center ph2 pv4 pb4 pv5-ns ph5-ns ph3-l" data-aos="fade-up">
   <h2 class="f1 ph2 ph4-l ashblue ttu">What we do</h2>
 
-  <p class="f3 ph2 ph4-l lh-copy mt2">Ashbright is a strategic communications firm that provides counsel to governments, companies and successful individuals. We use data and intelligence to understand and engage people. We design and execute state-of-the-art programmes to enable leaders to mobilise resources, shape perceptions and influence behaviour.</p>
+  <p class="f3 ph2 ph4-l lh-copy mt2">Ashbright is a strategic communications firm that provides counsel to governments,
+    companies and successful individuals. We use data and intelligence to understand and engage people. We design and
+    execute state-of-the-art programmes to enable leaders to mobilise resources, shape perceptions and influence
+    behaviour.</p>
 
 </section>
 
@@ -41,14 +49,17 @@ description: Ashbright is a strategic communications firm that provides counsel 
   <div class="mw7-ns center ph2 pv4 pv5-ns pa3-l ph5-ns pt5-l pb4-l" data-aos="fade-up">
     <h2 class="f1 ph2 ph4-l ashblue ttu">About</h2>
 
-     <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by <a href="{{ site.baseurl }}/tom-ashby" class="bb bw2 b--ashblue no-underline white dim">Tom Ashby</a> and <a href="{{ site.baseurl }}/rupert-wright" class="bb bw2 b--ashblue no-underline white dim">Rupert Wright</a>, based in London and Dubai and operating worldwide. </p>
+    <p class="f3 ph2 ph4-l lh-copy mt2 white">Ashbright was founded in 2017 by <a href="{{ site.baseurl }}/tom-ashby"
+        class="bb bw2 b--ashblue no-underline white dim">Tom Ashby</a> and <a href="{{ site.baseurl }}/rupert-wright"
+        class="bb bw2 b--ashblue no-underline white dim">Rupert Wright</a>, based in London and Dubai and operating
+      worldwide. </p>
 
-     <p class="f3 ph2 ph4-l lh-copy mt2 white">Our services fall under three main categories</p>
+    <p class="f3 ph2 ph4-l lh-copy mt2 white">Our services fall under three main categories</p>
   </div>
 
   <div class="dt-ns dt--fixed-ns pb4">
-  <div class="dtc-ns pa3 pa4-ns pt2">
-    <h2 class="f3 ashblue ttu">Research and strategy</h2>
+    <div class="dtc-ns pa3 pa4-ns pt2">
+      <h2 class="f3 ashblue ttu">Research and strategy</h2>
       <ul class="list pl0 white">
         <li class="lh-copy pt3">Peer group analysis</li>
         <li class="lh-copy pt3">Audience profiling and targeting</li>
@@ -57,9 +68,9 @@ description: Ashbright is a strategic communications firm that provides counsel 
         <li class="lh-copy pt3">Channels analysis</li>
         <li class="lh-copy pt3">Campaign planning</li>
       </ul>
-  </div>
-  <div class="dtc-ns pa3 pa4-ns pt2" >
-    <h2 class="f3 ashblue ttu">Content development</h2>
+    </div>
+    <div class="dtc-ns pa3 pa4-ns pt2">
+      <h2 class="f3 ashblue ttu">Content development</h2>
       <ul class="list pl0 white">
         <li class="lh-copy pt3">Messaging</li>
         <li class="lh-copy pt3">Issues management</li>
@@ -68,20 +79,20 @@ description: Ashbright is a strategic communications firm that provides counsel 
         <li class="lh-copy pt3">Speechwriting</li>
         <li class="lh-copy pt3">Crisis management</li>
       </ul>
-  </div>
-  <div class="dtc-ns pa3 pa4-ns pt2">
-    <h2 class="f3 ashblue ttu">Engagement</h2>
-    <ul class="list pl0 white">
-      <li class="lh-copy pt3">Media training and relations</li>
-      <li class="lh-copy pt3">Leadership support</li>
-      <li class="lh-copy pt3">Relationship building</li>
-      <li class="lh-copy pt3">Management reporting</li>
-      <li class="lh-copy pt3">Feedback development</li>
-      <li class="lh-copy pt3">Data analytics</li>
-    </ul>
+    </div>
+    <div class="dtc-ns pa3 pa4-ns pt2">
+      <h2 class="f3 ashblue ttu">Engagement</h2>
+      <ul class="list pl0 white">
+        <li class="lh-copy pt3">Media training and relations</li>
+        <li class="lh-copy pt3">Leadership support</li>
+        <li class="lh-copy pt3">Relationship building</li>
+        <li class="lh-copy pt3">Management reporting</li>
+        <li class="lh-copy pt3">Feedback development</li>
+        <li class="lh-copy pt3">Data analytics</li>
+      </ul>
 
+    </div>
   </div>
-</div>
 </section>
 
 <section id="situations" class="mw7-ns center ph2 pv4 pv5-l ph5-ns ph4-l">
@@ -89,7 +100,7 @@ description: Ashbright is a strategic communications firm that provides counsel 
 
   {% for situation in site.situations %}
 
-    <article>
+  <article>
     <a href="{{ situation.url }}" class="db pt4 ph2 ph0-l no-underline black dim">
       <div class="flex flex-column flex-row-ns">
         <div class="pr3-ns mb1 mb0-ns w-100 w-40-ns">
@@ -111,84 +122,68 @@ description: Ashbright is a strategic communications firm that provides counsel 
 
 <section id="sectors" class="bg-black">
   <div class="cf pa3 pa4-m pa5-l mw9 center">
-  <div class="fr w-100 w-80-l">
-    <p class="f6">
-      Sectors
-    </p>
-    <h2 class="f2 f1-l mt0 mb4 mb5-ns ttu white"><span class="ashblue">
-      Ashbright</span><br class="dn db-ns white"> works across a broad variety of sectors
-    </h2>
-  </div>
-  <div class="f6 lh-copy fl w-100 mb4-ns">
-    <div class="fl-ns w-100 w-20-l pr3-m pr5-l white">
-      <p>
-        Centre of Government
+    <div class="fr w-100 w-80-l">
+      <p class="f6">
+        Sectors
       </p>
+      <h2 class="f2 f1-l mt0 mb4 mb5-ns ttu white"><span class="ashblue">
+          Ashbright</span><br class="dn db-ns white"> works across a broad variety of sectors
+      </h2>
     </div>
-    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
-      <p>
-        Citizenship-by-investment
-      </p>
+    <div class="f6 lh-copy fl w-100 mb4-ns">
+      <div class="fl-ns w-100 w-20-l pr3-m pr5-l white">
+        <p>
+          Centre of Government
+        </p>
+      </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+        <p>
+          Citizenship-by-investment
+        </p>
+      </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+        <p>
+          Defence
+        </p>
+      </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+        <p>
+          Energy
+        </p>
+      </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+        <p>
+          Financial services
+        </p>
+      </div>
     </div>
-    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
-      <p>
-        Defence
-      </p>
-    </div>
-    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
-      <p>
-        Energy
-      </p>
-    </div>
-    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
-      <p>
-        Financial services
-      </p>
-    </div>
-  </div>
 
-  <div class="f6 lh-copy fl w-100 mb4">
-    <div class="fl-ns w-100 w-20-l pr3-m pr5-l white">
-      <p>
-        Fintech
-      </p>
-    </div>
-    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
-      <p>
-        High Net Worth Individuals
-      </p>
-    </div>
-    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
-      <p>
-      Investment promotion
-      </p>
-    </div>
-    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
-      <p>
-        Royal Courts
-      </p>
-    </div>
-    <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
-      <p>
-        Sovereign Wealth and Investment Funds
-      </p>
-    </div>
-  </div>
-  </div>
-
-</section>
-
-<section class="bg-brightxred">
-  <div class="ph3 ph4-ns ph5-l pv5 center cf">
-    <div class="fl w-100 w-20-l">&nbsp;</div>
-    <div class="fl w-100 w-80-l">
-      <img class="mb4 mb0-l mt2-l ml1-l w-90 w-25-l pb3" src="{{ site.baseurl }}/images/BrightX-Logo-ColourRedBack-01-web.png" alt="BrightX" >
-    <h2 class="f2 f1-l mt0 mb4 mb5-ns ttu white">Record and amplify defining moments of professional success</h2>
-     <p class="f3 f2-l white measure-wide">Bright X is a pop-up creative newsroom that produces high quality video, photography and text for distribution across your social media channels. </p>
-      <a class="ash-sans f5 f3-ns link dim ph3 ph4-l pv2 mv4 dib white bg-ashdarkgrey ttu tracked" href="https://www.brightx.media/">Find out more</a>
+    <div class="f6 lh-copy fl w-100 mb4">
+      <div class="fl-ns w-100 w-20-l pr3-m pr5-l white">
+        <p>
+          Fintech
+        </p>
+      </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+        <p>
+          High Net Worth Individuals
+        </p>
+      </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+        <p>
+          Investment promotion
+        </p>
+      </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+        <p>
+          Royal Courts
+        </p>
+      </div>
+      <div class="fl-ns w-50-m w-20-l pr3-m pr5-l white">
+        <p>
+          Sovereign Wealth and Investment Funds
+        </p>
+      </div>
     </div>
   </div>
 </section>
-
-
-
